@@ -1,4 +1,5 @@
 * 
+- Added a simple player for previewing your latest recording
 - Added a Messagebox to help you out how to record a "single window"
 - Changed icon that is displayed when recording
 - Various layout changes 
